@startuml

title __DAO's Class Diagram__\n

  namespace com.example.paperhelper {
    namespace model {
      namespace dao {
        class com.example.paperhelper.model.dao.DataBaseManager {
            - context : Context
            - db : SQLiteDatabase
            + DataBaseManager()
            + getPageUrlModelDao()
            - initDataBase()
        }
      }
    }
  }
  

  namespace com.example.paperhelper {
    namespace model {
      namespace dao {
        class com.example.paperhelper.model.dao.FileLibManager {
            - fileList : List<FileItem>
            + FileLibManager()
            + addFile()
            + getFileList()
            + loadLocalFile()
        }
      }
    }
  }
  

  namespace com.example.paperhelper {
    namespace model {
      namespace dao {
        class com.example.paperhelper.model.dao.NotebookLibManager {
            - notebookList : List<NotebookItem>
            + NotebookLibManager()
            + addNotebook()
            + getNotebookList()
            + loadLocalNoteBook()
            + removeNotebook()
            + updateNotebook()
        }
      }
    }
  }
  

  com.example.paperhelper.model.dao.DataBaseManager o-- com.paper.greendao.DaoMaster : daoMaster
  com.example.paperhelper.model.dao.DataBaseManager o-- com.paper.greendao.DaoSession : mSession
  com.example.paperhelper.model.dao.DataBaseManager o-- com.paper.greendao.PageUrlModelDao : pageUrlModelDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
